# project_euler_rust

./: .gitignore  Cargo.toml  README.md
benches/problems/: main.rs
src/: main.rs
src/problems/: mod.rs  problem001.rs  problem002.rs  problem003.rs  problem004.rs  problem005.rs  problem006.rs  problem007.rs  problem008.rs  problem009.rs  problem010.rs  problem012.rs  problem013.rs  problem014.rs  problem016.rs  problem018.rs  problem021.rs  problem023.rs  problem028.rs  problem034.rs  problem042.rs  problem045.rs  problem047.rs  problem059.rs  problem067.rs  problem069.rs  utils.rs
src/problems/tests/: problem001.rs  problem002.rs  problem003.rs  problem004.rs  problem005.rs  problem006.rs  problem007.rs  problem008.rs  problem009.rs  problem018.rs  problem021.rs  problem042.rs  problem045.rs  utils.rs
