[package]
default-run="main"
name = "project_euler_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "=0.15.6"
ndarray-linalg = { version = "0.16", features = ["intel-mkl-static"] }
itertools = "0.12.1"
cached="0.51.3"
rayon = "1.10.0"
tailcall = "~1"
num-bigint = "0.4.5"
ascii = "1.1.0"
ascii_converter = "0.3.0"

[[bench]]
name = "problems"
harness = false

[dev-dependencies]
criterion = {version = "0.3", features = ["html_reports"] }
